<resources>
    <string name="app_name">The Last Time</string>
    <string name="text_title">Title</string>
    <string name="text_description">Description</string>
    <string name="text_timestamp">Timestamp</string>
    <string name="msg_last_time">The last time you did it was</string>
    <string name="text_add">Add</string>
    <string name="text_edit">Edit</string>
    <string name="msg_again">Oops, I did it again</string>
    <string name="msg_renew">Renewed successfully</string>
    <string name="msg_error_on_renew">Error while renewing</string>
    <string name="msg_added">Task added</string>
    <string name="msg_error_on_add">Error while adding</string>
    <string name="msg_remove_task">Do you want to remove this task?</string>
    <string name="msg_yes">Yes</string>
    <string name="msg_no">No</string>
    <string name="not_done">Never done</string>
    <string name="last_done">Last time</string>
    <string name="text_add_new_task">Add new task</string>
    <!-- Strings used for fragments for navigation -->

</resources>